--- a/app/src/main/res/layout/add_song_to_playlist.xml
+++ b/app/src/main/res/layout/add_song_to_playlist.xml
@@ -15,8 +15,8 @@
 
     <ListView
         android:id="@+id/lv_song_add"
-        android:layout_width="368dp"
-        android:layout_height="551dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@id/toolbar_list"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_addSong"></ListView>
 </android.support.constraint.ConstraintLayout>
