--- a/app/src/main/res/layout/dialog_add_playlist.xml
+++ b/app/src/main/res/layout/dialog_add_playlist.xml
@@ -5,7 +5,7 @@
     <EditText
         android:id="@+id/addPlaylist"
         android:hint="Nhập tên playlist"
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="wrap_content" />
 
 </android.support.constraint.ConstraintLayout>
