--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -11,7 +11,15 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         app:title="@string/app_name"
-        app:titleTextColor="#ffff"></android.support.v7.widget.Toolbar>
+        app:titleTextColor="#ffff">
+        <TextView
+            android:id="@+id/user"
+            android:textColor="#fff"
+            android:text="Nấm Rơm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="right"/>
+    </android.support.v7.widget.Toolbar>
 
     <TextView
         android:id="@+id/textView2"
