--- a/app/src/main/res/layout/row_select_playlist.xml
+++ b/app/src/main/res/layout/row_select_playlist.xml
@@ -14,7 +14,7 @@
         android:background="#fff" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
@@ -27,7 +27,7 @@
             android:layout_marginTop="8dp"
             android:text="@string/app_name"
             android:textColor="#000"
-            android:textSize="20dp" />
+            android:textSize="17dp" />
 
         <TextView
             android:id="@+id/singer"
@@ -67,8 +67,8 @@
         android:id="@+id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="130dp"
-        android:layout_marginTop="25dp"/>
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="2dp"/>
 
 
 </LinearLayout>
