--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
     android:id="@+id/context_add"
-    android:title="Thêm bài hát vào playlist"
+    android:title="Thêm vào playlist"
     />
     <item
         android:id="@+id/context_del"
